# STM32CubeL0

./: CMakeLists.txt
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32L0xx/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32L0xx/Source/Templates/gcc/linker/: sections.ld  stm32l021xx-mem.ld
Drivers/STM32L0xx_HAL_Driver/: CMakeLists.txt
toolchains/: arm-none-eabi.cmake  stm32l021xx.cmake
